<resources>
    <string name="app_name">SingleScreenApp</string>
    <string name="address">address</string>
    <string name="phone_number">phone number</string>
    <string name="business_hours">business hours</string>
    <string name="the_brown">The Brown</string>
    <string name="the_brown_address">76, Central-town-ro, Yeongtong-gu, Suwon-si, Gyeonggi-do, Republic of Korea</string>
    <string name="the_brown_phone_number">+82-10-123-4567</string>
    <string name="the_brown_business_hours">9:00 AM ~ 22:00 PM, Everyday</string>
    <string name="the_brown_description">The Brown is a complex cafe style with a healthy brunch and premium coffee and beverage with fresh bakery in differentiated service and luxurious atmosphere.\nThe Brown\'s brunch is made in an order-made format that is made to order immediately using baked bread in the store.</string>
    <string name="the_brown_photo_description">The Brown Brunch Photo</string>
</resources>
